--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,5 @@
       "@/shared/*": ["src/shared/*"]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
